/*
 * Copyright (c) 2019, NVIDIA CORPORATION. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package nvidia.claraviz.example;

import "nvidia/claraviz/core/camera.proto";
import "nvidia/claraviz/core/types.proto";

option java_package = "com.nvidia.claraviz.example";

// Service that implements the Example Render Server.
service RenderServer
{
    // Sets the 3D viewing transformation
    rpc Camera(nvidia.claraviz.core.CameraRequest) returns(nvidia.claraviz.core.CameraResponse) {}

    // Sets the slice location displayed
    rpc Slice(SliceRequest) returns(SliceResponse) {}
}

// Message sent by the client for the `Slice` method.
message SliceRequest
{
    // Slice to display in the three views
    // Default: (0.0, 0.0, 0.0)
    // Range: [(0.0, 0.0, 0.0), (1.0, 1.0, 1.0)]
    nvidia.claraviz.core.Float3 slice = 1;
}

// Message returned to the client by the `Slice` method.
message SliceResponse
{
}
